feat: add dropdown component

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "chakra-ui-autocomplete": "^1.4.5",
     "framer-motion": "^4.1.17",
     "jssha": "^3.2.0",
     "leaflet": "^1.7.1",
