--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "chakra-ui-autocomplete": "^1.4.5",
+    "date-fns": "^2.26.0",
     "framer-motion": "^4.1.17",
     "jssha": "^3.2.0",
     "leaflet": "^1.7.1",
