--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,7 +12,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [16.x]
+        node-version: [20.x]
 
     steps:
       - uses: actions/checkout@v2
@@ -26,6 +26,8 @@ jobs:
           echo REACT_APP_CLIENT_ID =${{ secrets.TDX_CLIENT_ID }} >> .env
           echo REACT_APP_CLIENT_SECRET =${{ secrets.TDX_CLIENT_SECRET }} >> .env
       - name: npm ci, build
+        with:
+          node-versions: '16.x'
         run: |
           npm ci
           npm run build --if-present
