--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,7 +27,7 @@ jobs:
           echo REACT_APP_CLIENT_SECRET =${{ secrets.TDX_CLIENT_SECRET }} >> .env
       - name: npm ci, build
         with:
-          node-versions: '16.x'
+          node-versions: [16.x]
         run: |
           npm ci
           npm run build --if-present
