--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,6 +27,7 @@ jobs:
           echo REACT_APP_CLIENT_SECRET =${{ secrets.TDX_CLIENT_SECRET }} >> .env
       - name: npm ci, build
         run: |
+          npm install
           npm ci
           npm run build --if-present
       - name: deploy to gh-pages
